--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
- 
+
 <head>
     <title>Contour App</title>
 
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
- 
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -13,11 +13,11 @@
 
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
- 
+
 </head>
 
 <body>
- 
+
     <div class="container">
         <div class="header">
             <nav>
@@ -32,10 +32,8 @@
             </nav>
             <h3 class="text-muted">Contour App</h3>
         </div>
-
-        <button type="button" class="btn btn-info"><a href="{{ url_for('photos') }}">Start!</a></button>
- 
+        <button type="button" class="btn btn-info" onclick="window.location.href='{{ url_for('photos') }}'">Start!</button>
     </div>
 </body>
- 
+
 </html>
