--- a/templates/contouring.html
+++ b/templates/contouring.html
@@ -169,7 +169,7 @@
                 <div id="sample-image" class="container measure-card-width">
                 </div>
                  <div id="container">
-                    <img id='testimg' alt="Test Image" />
+                    <img id='contour-img' alt="Test Image" />
                 </div>
             </div>
 
