--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,7 +1,3 @@
-.testimg {
-    cursor: crosshair;
-}
-
 .top-level-container {
     width: 100%;
     max-width: 100%;
@@ -71,4 +67,8 @@
     width: 640px;
     height: 480px;
     background-color: #666;
+}
+
+#testimg {
+    cursor: crosshair;
 }
