--- a/templates/photos.html
+++ b/templates/photos.html
@@ -41,7 +41,7 @@
         <div class="column-view-div">
             <div id="sample-image" class="container">
             </div>
-    		<div id="container">
+    		<div id="video-container">
     		    <video autoplay="true" id="videoElement"></video>
     		</div>
             <button id="snap" class="btn btn-success">Take Photo</button>
