--- a/templates/contouring.html
+++ b/templates/contouring.html
@@ -158,11 +158,12 @@
         </div>
 
         <h4 id="currentContour" name="currentContour"></h4>
-        <p>
+        <p id="instruction-text">
             Click twice around the outside of the specified body part to define the contour using two points.
             You can click and drag the points to refine the contour definition!
-        </p>
-        <p>
+
+            <br />
+
             After defining the two points, click the Next button to proceed!
         </p>
             <div class="column-view-div">
