--- a/templates/contouring.html
+++ b/templates/contouring.html
@@ -169,7 +169,7 @@
             <div class="column-view-div">
                 <div id="sample-image" class="container measure-card-width">
                 </div>
-                 <div id="container">
+                 <div id="contour-image-container">
                     <img id='testimg' alt="Test Image" />
                 </div>
             </div>
